# cancer-alpha

./: .gitattributes  .gitignore  CHANGELOG.md  COMMERCIALIZATION_STRATEGY.md  COMPETITIVE_ASSESSMENT.md  COMPREHENSIVE_DEPLOYMENT_GUIDE.md  COMPREHENSIVE_MODEL_RESULTS_SUMMARY.md  CONTRIBUTING.md  Cancer_Alpha_Business_Pitch_Deck.md  DEMO_AND_ARCHITECTURE_SUMMARY.md  DEMO_IMPROVEMENTS_FINAL.md  EXECUTIVE_SUMMARY.md  EXECUTIVE_SUMMARY_SHORT.md  FULL_PROJECT_ASSESSMENT.md  FUTURE_IMPROVEMENTS.md  GITHUB_SETUP_INSTRUCTIONS.md  HOUSEKEEPING_CLEANUP_LOG.md  IP_PROTECTION_STATUS.md  LEGACY_SCRIPTS.md  LICENSE  LICENSE_ENHANCED_EXAMPLE.md  MASSIVE_TCGA_RESULTS_ANALYSIS.md  MASTER_INSTALLATION_GUIDE.md  MONETIZATION_STRATEGY.md  ONCURA_REBRANDING_PLAN.md  ONCURA_REBRANDING_SUMMARY.md  PATENTS.md  PATENT_PROTECTION_COMPLETE.md  PHASE2_REPOSITORY_ORGANIZATION.md  PRODUCTION_DEPLOYMENT.md  README.md  README_IMPROVEMENTS_SUMMARY.md  READY_TO_DEPLOY.md  REPOSITORY_STRUCTURE.md  REPRODUCIBILITY_PACKAGE_SUMMARY.md  RESEARCH.md  STREAMLIT_APP_FIXES.md  SUBMISSION_README.md  WARP.md  WORKING_DEPLOYMENT_GUIDE.md  (+80 more)
_includes/: head-custom.html
archive/: README.md
business/: outreach_letter.md
cache/: comprehensive_robust_mapping.pkl  comprehensive_sample_mapping.pkl  robust_uuid_mapping.pkl  uuid_sample_mapping.pkl
cancer-alpha-prisma/: README.md  pyproject.toml  requirements.txt
cancer-alpha-prisma/notebooks/: 01_prisma_figure_generation.ipynb
cancer_genomics_ai_demo_minimal/: .gitignore  ACCURACY_IMPROVEMENT_STRATEGY.md  BREAKTHROUGH_RESULTS.md  CLINICAL_VALIDATION_PREPARATION.md  (+36 more)
(+981 files in other folders)
