[tool.poetry]
name = "cancer-alpha-prisma"
version = "0.1.0"
description = "A project for generating PRISMA figures for the Cancer Alpha data preprocessing pipeline."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.4"
pandas = "^1.3"
numpy = "^1.21"
seaborn = "^0.11"
click = "^8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"